KEYCLOAK-14234 Adjust Adapter testsuite to work with app/auth.server.host including TLS configured